--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hola mundo
+<DOCTYPE html></DOCTYPE>
+<html>
+  <head>
+    <title>Esto es un titulo</title>
+    <meta content="">
+    <style></style>
+  </head>
+  <body>
+    </body>
+    <html>
