--- a/HTML/Ejercicio6/Ejercicio 6.html
+++ b/HTML/Ejercicio6/Ejercicio 6.html
@@ -5,15 +5,28 @@
     <title>Ejercicio 6</title>
   </head>
     <img src="uvas.jpg"/>
-       <dl><li>Ramaprincipal</li></dl>
-           <dd><li type="circle">Ramita</li></dd>
-               <li type="square">uva</li>
-               <li type="square">uva</li>
-               <li type="square">uva</li>
-           <dd><li type="circle">uva</li></dd>
-           <dd><li type="circle">Ramita</li></dd>
-    
-    
+    <ul>
+       <dl><li>Rama principal</li></dl>
+               <ul>
+                 <li type="circle">Ramita</li>
+                   <ul>
+                       <li type="square">uva</li>
+                       <li type="square">uva</li>
+                       <li type="square">uva</li>
+                   </ul>
+                <li type="circle">Ramita</li>
+                <li type="circle">uva</li>
+                                   <ul>
+                                      <li type="square">uva</li>
+                                      <li type="square">Ramita</li>
+                                                         <ul>
+                                                             <li>uva</li>
+                                                             <li>uva</li>
+                                                         </ul> 
+                                                     <li>uva</li>
+                                   </ul>
+                   </ul>
+    </ul>    
   <body>
 
   </body>
