--- a/HTML/Ejercicio2/Ejercicio 2-Redireccion(Completo).html
+++ b/HTML/Ejercicio2/Ejercicio 2-Redireccion(Completo).html
@@ -3,7 +3,7 @@
   <head>
     Va a ser redirigido a la web del instituto
     <meta charset="utf-8">
-    <title></title>
+    <title>Ejercicio 2</title>
   </head>
     <meta http-equiv="Refresh" content="5;url=https://site.educa.madrid.org/ies.villablanca.madrid/" />
   <body>
