--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <DOCTYPE html></DOCTYPE>
 <html>
   <head>
-    <title>Esto es un titulo</title>
+    <title>Practicas HTML</title>
     <meta content="">
     <style></style>
   </head>
