--- a/HTML/Ejercicio1/Ejercicio1-Hola mundo(Completo).html
+++ b/HTML/Ejercicio1/Ejercicio1-Hola mundo(Completo).html
@@ -2,8 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Ejercicio 1</title>
+    <title>Ejercicio 1 Alejandro Ortiz</title>
   </head>
+    
   <body>
     <br />Hola mundo!
     <br /><img src="Mundo.jpg"/>
