--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <body>
       Ejercicios
       <br />
-      <br /><a href="Ejercicio1-Hola mundo(Completo).html">Ejercicio1</a>
-      <br /><a href="Ejercicio 2-Redireccion(Completo).html">Ejercicio2</a>
-      <br /><a href="Ejercicio 3-CamposMeta(completo).html">Ejercicio3</a>
-      <br /><a href="Ejercicio 4.html">Ejercicio4</a>
-      <br /><a href="Ejercicio 5.html">Ejercicio5</a>
-      <br /><a href="Ejercicio 6.html">Ejercicio6</a>
+      <br /><a href="HTML/Ejercicio1/Ejercicio1-Hola%20mundo(Completo).html">Ejercicio1</a>
+      <br /><a href="HTML/Ejercicio2/Ejercicio%202-Redireccion(Completo).html">Ejercicio2</a>
+      <br /><a href="HTML/Ejercicio3/Ejercicio%203-CamposMeta(completo).html">Ejercicio3</a>
+      <br /><a href="HTML/Ejercicio4/Ejercicio%204.html">Ejercicio4</a>
+      <br /><a href="HTML/Ejercicio5/Ejercicio%205.html">Ejercicio5</a>
+      <br /><a href="HTML/Ejercicio6/Ejercicio%206.html">Ejercicio6</a>
     </body>
     <html>
