--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style></style>
   </head>
   <body>
-      Ejercicios
+      Ejercicios Alejandro Ortiz
       <br />
       <br /><a href="HTML/Ejercicio1/Ejercicio1-Hola%20mundo(Completo).html">Ejercicio1</a>
       <br /><a href="HTML/Ejercicio2/Ejercicio%202-Redireccion(Completo).html">Ejercicio2</a>
