--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
       <br /><a href="HTML/Ejercicio4/Ejercicio%204.html">Ejercicio4</a>
       <br /><a href="HTML/Ejercicio5/Ejercicio%205.html">Ejercicio5</a>
       <br /><a href="HTML/Ejercicio6/Ejercicio%206.html">Ejercicio6</a>
+      <br /><a href="HTML/Ejercicio7/Ejercicio%207.html">Ejercicio7</a>
+      <br /><a href="HTML/Ejercicio8/Ejercicio%208.html">Ejercicio8</a>
+      <br /><a href="HTML/Ejercicio9/Ejercicio9.html">Ejercicio9</a>
     </body>
     <html>
