--- a/index.html
+++ b/index.html
@@ -17,5 +17,9 @@
       <br /><a href="HTML/Ejercicio7/Ejercicio%207.html">Ejercicio7</a>
       <br /><a href="HTML/Ejercicio8/Ejercicio%208.html">Ejercicio8</a>
       <br /><a href="HTML/Ejercicio9/Ejercicio9.html">Ejercicio9</a>
+      <br /><a href="HTML/Ejercicio10/Ejercicio10.html">Ejercicio10</a>
+      <br /><a href="HTML/Ejercicio11/Ejercicio%2011.html">Ejercicio11</a>
+      <br /><a href="HTML/Ejercicio12/Ejercicio12.html">Ejercicio12</a>
+      <br /><a href="HTML/Ejercicio%252013/Ejercicio13.html">Ejercicio13</a>
     </body>
     <html>
