--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
       <br /><a href="HTML/Ejercicio10/Ejercicio10.html">Ejercicio10</a>
       <br /><a href="HTML/Ejercicio11/Ejercicio%2011.html">Ejercicio11</a>
       <br /><a href="HTML/Ejercicio12/Ejercicio12.html">Ejercicio12</a>
-      <br /><a href="HTML/Ejercicio%252013/Ejercicio13.html">Ejercicio13</a>
+      <br /><a href="HTML/Ejercicio13/Ejercicio13.html">Ejercicio13</a>
     </body>
     <html>
