--- a/HTML/Ejercicio13/Ejercicio13.html
+++ b/HTML/Ejercicio13/Ejercicio13.html
@@ -1,29 +1,36 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-      <meta charset="utf-8"> 
-    <title>Ejercicio 13 Alejandro Ortiz</title>
-      <style>
-        table, th, td { border: 1px solid black}
-       </style>
-  </head>
-
-  <body>
-      <table>
-          <tr>
-              <td rowspan="2">1</td>
-              <td rowspan="2">2</td>
-              <td>3</td>
-             </tr>
-          <tr>
-              <td >A</td>
-              <td>B</td>
-          </tr>
-          <tr>
-              <td colspan="1">4</td> 
-              <td colspan="1">5</td>
-              <td rowspan="2" colspan="3">6</td>
-          </tr>
-      </table>
-  </body>
+    <head>
+      <title>Ejercicio 7 Alejandro Ortiz</title>
+     <style>
+        table, th, td {
+        border: 1px solid black;
+        }    
+     </style>
+    </head>
+        <body>
+         <table>
+            <tr>
+            <td>1</td>
+            <td>2</td>
+            <td>3
+            <table border>
+                <tr>
+                    <td>A</td>
+                    <td>B</td>
+                </tr>
+                <tr>
+                    <td>C</td>
+                    <td>D</td>
+                </tr>
+            </table>
+            </td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>5</td>
+                <td>6</td>
+            </tr>
+         </table>    
+        </body>
 </html>
