--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <br /><a href="HTML/Ejercicio11/Ejercicio%2011.html">Ejercicio11</a>
       <br /><a href="HTML/Ejercicio12/Ejercicio12.html">Ejercicio12</a>
       <br /><a href="HTML/Ejercicio13/Ejercicio13.html">Ejercicio13</a>
-      <br /><a href="HTML/Ejercicio14/Ejercicio14.html">Ejercicio14</a>
+      <br /><a href="HTML/Ejercicio14/Ejercicio14(mejorado).html">Ejercicio14</a>
       <br /><a href="">Ejercicio15</a>
       <br /><a href="">Ejercicio16</a>
       <br /><a href="">Ejercicio17</a>
