--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
       <br /><a href="HTML/Ejercicio12/Ejercicio12.html">Ejercicio12</a>
       <br /><a href="HTML/Ejercicio13/Ejercicio13.html">Ejercicio13</a>
       <br /><a href="HTML/Ejercicio14/Ejercicio14(mejorado).html">Ejercicio14</a>
-      <br /><a href="">Ejercicio15</a>
-      <br /><a href="">Ejercicio16</a>
-      <br /><a href="">Ejercicio17</a>
-      <br /><a href="">Ejercicio18</a>
-      <br /><a href="">Ejercicio19</a>
-      <br /><a href="">Ejercicio20</a>
-      <br /><a href="">Ejercicio21</a>
-      <br /><a href="">Ejercicio22</a>
-      <br /><a href="">Ejercicio23</a>
+      <br /><a href="">Ejercicio15NO</a>
+      <br /><a href="">Ejercicio16NO</a>
+      <br /><a href="">Ejercicio17NO</a>
+      <br /><a href="">Ejercicio18NO</a>
+      <br /><a href="">Ejercicio19NO</a>
+      <br /><a href="">Ejercicio20NO</a>
+      <br /><a href="">Ejercicio21NO</a>
+      <br /><a href="">Ejercicio22NO</a>
+      <br /><a href="">Ejercicio23NO</a>
     </body>
     <html>
