--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       <br /><a href="HTML/Ejercicio12/Ejercicio12.html">Ejercicio12</a>
       <br /><a href="HTML/Ejercicio13/Ejercicio13.html">Ejercicio13</a>
       <br /><a href="HTML/Ejercicio14/Ejercicio14(mejorado).html">Ejercicio14</a>
-      <br /><a href="">Ejercicio15NO</a>
-      <br /><a href="">Ejercicio16NO</a>
+      <br /><a href="HTML/Ejercicio15/Ejercicio15.html">Ejercicio15</a>
+      <br /><a href="HTML/Ejercicio16/Ejercicio16.html">Ejercicio16</a>
       <br /><a href="">Ejercicio17NO</a>
       <br /><a href="">Ejercicio18NO</a>
       <br /><a href="">Ejercicio19NO</a>
