--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <br /><a href="HTML/Ejercicio14/Ejercicio14(mejorado).html">Ejercicio14</a>
       <br /><a href="HTML/Ejercicio15/Ejercicio15.html">Ejercicio15</a>
       <br /><a href="HTML/Ejercicio16/Ejercicio16.html">Ejercicio16</a>
-      <br /><a href="HTML/Ejercicio17/Ejercicio17.html"></a>
+      <br /><a href="HTML/Ejercicio17/Ejercicio17.html">Ejercicio17</a>
       <br /><a href="">Ejercicio18NO</a>
       <br /><a href="">Ejercicio19NO</a>
       <br /><a href="">Ejercicio20NO</a>
