--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <br /><a href="HTML/Ejercicio15/Ejercicio15.html">Ejercicio15</a>
       <br /><a href="HTML/Ejercicio16/Ejercicio16.html">Ejercicio16</a>
       <br /><a href="HTML/Ejercicio17/Ejercicio17.html">Ejercicio17</a>
-      <br /><a href="">Ejercicio18NO</a>
+      <br /><a href="HTML/Ejercicio18/Ejercicio18.html">Ejercicio18</a>
       <br /><a href="">Ejercicio19NO</a>
       <br /><a href="">Ejercicio20NO</a>
       <br /><a href="">Ejercicio21NO</a>
