--- a/index.html
+++ b/index.html
@@ -6,30 +6,52 @@
     <style></style>
   </head>
   <body>
-      Ejercicios Alejandro Ortiz
-      <br />
-      <br /><a href="HTML/Ejercicio1/Ejercicio1-Hola%20mundo(Completo).html">Ejercicio1</a>
-      <br /><a href="HTML/Ejercicio2/Ejercicio%202-Redireccion(Completo).html">Ejercicio2</a>
-      <br /><a href="HTML/Ejercicio3/Ejercicio%203-CamposMeta(completo).html">Ejercicio3</a>
-      <br /><a href="HTML/Ejercicio4/Ejercicio%204.html">Ejercicio4</a>
-      <br /><a href="HTML/Ejercicio5/Ejercicio%205.html">Ejercicio5</a>
-      <br /><a href="HTML/Ejercicio6/Ejercicio%206.html">Ejercicio6</a>
-      <br /><a href="HTML/Ejercicio7/Ejercicio%207.html">Ejercicio7</a>
-      <br /><a href="HTML/Ejercicio8/Ejercicio%208.html">Ejercicio8</a>
-      <br /><a href="HTML/Ejercicio9/Ejercicio9.html">Ejercicio9</a>
-      <br /><a href="HTML/Ejercicio10/Ejercicio10.html">Ejercicio10</a>
-      <br /><a href="HTML/Ejercicio11/Ejercicio%2011.html">Ejercicio11</a>
-      <br /><a href="HTML/Ejercicio12/Ejercicio12.html">Ejercicio12</a>
-      <br /><a href="HTML/Ejercicio13/Ejercicio13.html">Ejercicio13</a>
-      <br /><a href="HTML/Ejercicio14/Ejercicio14(mejorado).html">Ejercicio14</a>
-      <br /><a href="HTML/Ejercicio15/Ejercicio15.html">Ejercicio15</a>
-      <br /><a href="HTML/Ejercicio16/Ejercicio16.html">Ejercicio16</a>
-      <br /><a href="HTML/Ejercicio17/Ejercicio17.html">Ejercicio17</a>
-      <br /><a href="HTML/Ejercicio18/Ejercicio18.html">Ejercicio18</a>
-      <br /><a href="">Ejercicio19NO</a>
-      <br /><a href="">Ejercicio20NO</a>
-      <br /><a href="">Ejercicio21NO</a>
-      <br /><a href="">Ejercicio22NO</a>
-      <br /><a href="">Ejercicio23NO</a>
+   <table>
+      <thead>
+        <tr>
+          <th><a href="html/index.html">HTML</a></th>
+          <th><a href="css/index.html">CSS</a></th>
+          <th><a href="#">Otros...</a></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td><a href="html/ejercicio1.html">ejercicio1</a></td>
+          <td><a href="css/ejercicio1.html">ejercicio1</a></td>
+        </tr>
+        <tr>
+          <td><a href="html/ejercicio2.html">ejercicio2</a></td>
+          <td><a href="css/ejercicio2.html">ejercicio2</a></td>
+          <td><a href="#">...</a></td>
+        </tr>
+        <tr>
+          <td><a href="html/ejercicio3.html"></a>ejercicio3</td>
+          <td><a href="#">...</a></td>
+        </tr>
+        <tr>
+          <td><a href="html/ejercicio4.html"></a>ejercicio4</td>
+          <td><a href="#">...</a></td>
+        </tr>
+        <tr>
+          <td><a href="html/ejercicio5.html"></a>ejercicio5</td>
+          <td><a href="#">...</a></td>
+        </tr>
+        <tr>
+          <td><a href="html/ejercicio6.html"></a>ejercicio6</td>
+          <td><a href="#">...</a></td>
+        </tr>
+        <tr>
+          <td><a href="html/ejercicio7.html"></a>ejercicio7</td>
+          <td><a href="#">...</a></td>
+        </tr>
+        <tr>
+          <td><a href="html/ejercicio8.html"></a>ejercicio8</td>
+          <td><a href="#">...</a></td>
+        </tr>
+          <tr>
+          <td><a href="html/ejercicio8.html"></a>ejercicio9</td>
+          <td><a href="#">...</a></td>
+        </tr>
+       </tbody>
     </body>
     <html>
