--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <table>
       <thead>
         <tr>
-          <th><a href="html/index.html">HTML</a></th>
+          <th><a href="HTML/index.html">HTML</a></th>
           <th><a href="css/index.html">CSS</a></th>
           <th><a href="#">Otros...</a></th>
         </tr>
