--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <DOCTYPE html></DOCTYPE>
 <html>
   <head>
-    <title>Practicas HTML</title>
+    <title>Practicas HTML Alejandro Ortiz</title>
     <meta content="">
     <style></style>
   </head>
@@ -13,45 +13,5 @@
           <th><a href="css/index.html">CSS</a></th>
           <th><a href="#">Otros...</a></th>
         </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td><a href="html/ejercicio1.html">ejercicio1</a></td>
-          <td><a href="css/ejercicio1.html">ejercicio1</a></td>
-        </tr>
-        <tr>
-          <td><a href="html/ejercicio2.html">ejercicio2</a></td>
-          <td><a href="css/ejercicio2.html">ejercicio2</a></td>
-          <td><a href="#">...</a></td>
-        </tr>
-        <tr>
-          <td><a href="html/ejercicio3.html"></a>ejercicio3</td>
-          <td><a href="#">...</a></td>
-        </tr>
-        <tr>
-          <td><a href="html/ejercicio4.html"></a>ejercicio4</td>
-          <td><a href="#">...</a></td>
-        </tr>
-        <tr>
-          <td><a href="html/ejercicio5.html"></a>ejercicio5</td>
-          <td><a href="#">...</a></td>
-        </tr>
-        <tr>
-          <td><a href="html/ejercicio6.html"></a>ejercicio6</td>
-          <td><a href="#">...</a></td>
-        </tr>
-        <tr>
-          <td><a href="html/ejercicio7.html"></a>ejercicio7</td>
-          <td><a href="#">...</a></td>
-        </tr>
-        <tr>
-          <td><a href="html/ejercicio8.html"></a>ejercicio8</td>
-          <td><a href="#">...</a></td>
-        </tr>
-          <tr>
-          <td><a href="html/ejercicio8.html"></a>ejercicio9</td>
-          <td><a href="#">...</a></td>
-        </tr>
-       </tbody>
-    </body>
+  </body>
     <html>
