--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
           <th><a href="css/index.html">CSS</a></th>
           <th><a href="#">Otros...</a></th>
         </tr>
+       </thead>
+      </table>
   </body>
-    <html>
+ </html>
