--- a/HTML/Ejercicio18/Ejercicio18.html
+++ b/HTML/Ejercicio18/Ejercicio18.html
@@ -6,7 +6,7 @@
 			<form>
 				<fieldset>
 					<legend><h1>Configura tu pizza</h1></legend>
-					<img src="pizza%20newyork.jpg">
+					<img src="pizza.jpg">
 				</fieldset>
 					<fieldset>
 					<legend><h2>Tipo de masa</h2></legend>
