--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <style></style>
   </head>
   <body>
-      <h1>Practicas Aplicaciones Web Alejandro Ortiz</h1>
-   <table>
+      <h1 align="center">Practicas Aplicaciones Web Alejandro Ortiz</h1>
+   <table align="center">
         <tr>
           <th><a href="HTML/index.html">HTML</a></th>
           <th><a href="css/index.html">CSS</a></th>
