--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <title>Practicas HTML Alejandro Ortiz</title>
     <meta content="">
-    <style></style>
+    <style>
+        table, th, td {
+        border: 1px solid black;
+        }
+    </style>
   </head>
   <body>
       <h1 align="center">Practicas Aplicaciones Web Alejandro Ortiz</h1>
