--- a/HTML/Ejercicio18/Ejercicio18.html
+++ b/HTML/Ejercicio18/Ejercicio18.html
@@ -2,25 +2,34 @@
 		<head>
 			<title>Ejercicio18 Alejandro Ortiz</title>
 		</head>
-		<body style="background-color: cornsilk">
+		<body style="background-color: indianred">
 			<form>
 				<fieldset>
-					<legend><h1>Configura tu pizza</h1></legend>
+					<legend><h1>Tu pizza, tus normas :)</h1></legend>
 					<img src="pizza.jpg">
 				</fieldset>
 					<fieldset>
 					<legend><h2>Tipo de masa</h2></legend>
 						<p>
-							<input type="radio" name="masa" id="masa_1" value="fina">
+							<input type="radio" name="masa" id="masa_1" value="Fina">
 							<label for="masa_1">Fina</label>
 						</p>
 						<p>
-							<input type="radio" name="masa" id="masa_2" value="gorda">
-							<label for="masa_2">gorda</label>
+							<input type="radio" name="masa" id="masa_2" value="Gorda">
+							<label for="masa_2">Gorda</label>
 						</p>
+                        <p>
+							<input type="radio" name="masa" id="masa_2" value="Finissima">
+							<label for="masa_2">Finissima</label>
+						</p>
+                        <p>
+							<input type="radio" name="masa" id="masa_2" value="Borde Relleno de Queso">
+							<label for="masa_2">Borde Relleno de Queso</label>
+						</p>
+                        
 				</fieldset>
 				<fieldset>
-					<legend><h2>Tipo de masa</h2></legend>
+					<legend><h2>Tipo de aderezo</h2></legend>
 						<p>
 							<input type="radio" name="salsa" id="salsa_1" value="tomate">
 							<label for="salsa_1">Tomate</label>
@@ -37,18 +46,18 @@
 				<fieldset>
 					<legend><h2>Queso</h2></legend>
 						<p>
-							<input type="radio" name="queso" id="queso_1" value="si">
-							<label for="masa_1">si</label>
+							<input type="radio" name="queso" id="queso_1" value="Sí">
+							<label for="masa_1">Sí</label>
 						</p>
 						<p>
-							<input type="radio" name="queso" id="queso_2" value="no">
-							<label for="queso_2">no</label>
+							<input type="radio" name="queso" id="queso_2" value="No">
+							<label for="queso_2">No</label>
 						</p>
 				</fieldset>
 				<fieldset>
 				<legend><h2>Ingredientes</h2></legend>
 						<input type="checkbox">
-						<label>Salchichas</label>
+						<label>Pulled Pork</label>
 						<input type="checkbox">
 						<label>Jamon</label>
 						<input type="checkbox">
@@ -57,7 +66,7 @@
 						<input type="checkbox">
 						<label>Champiñones</label>
 						<input type="checkbox">
-						<label>Aceitunas</label>
+						<label>Aceitunas Negras</label>
 						<input type="checkbox">
 						<label>Bacon</label>
 					<p>
@@ -66,10 +75,14 @@
 						<input type="checkbox">
 						<label>Pepperoni</label>
 						<input type="checkbox">
-						<label>Atun</label>
+						<label>Maiz</label>
 					<p>
 						<input type="checkbox">
-						<label>Pimientos</label>
+						<label>Pimiento Verde</label>
+                        <input type="checkbox">
+                        <label>Pimiento Rojo</label>
+                        <input type="checkbox">
+                        <label>Pimiento Amarillo</label>
 					</p>
 				</fieldset>
 				<fieldset>
