--- a/HTML/Ejercicio19/Practica19.html
+++ b/HTML/Ejercicio19/Practica19.html
@@ -9,8 +9,7 @@
      
       <div style="position:fixed; top 10px; right:10px; border: 3px solid black; background-color:aliceblue">
        <h1>Cosas que le gustan al resto de mi clase</h1>
-         <iframe src="https://open.spotify.com/playlist/1jQAaWvFgPuaALjfNWRPhb?si=aPxhRg27SLSn9RCcgoukMA" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media" >
-         </iframe>
+          <iframe src="https://open.spotify.com/embed/playlist/1jQAaWvFgPuaALjfNWRPhb" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
       </div>
       <h1>ACDC Shot In The Dark</h1>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/v5uSXfiMQ-Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
