--- a/HTML/index.html
+++ b/HTML/index.html
@@ -27,9 +27,6 @@
       <br /><a href="Ejercicio17/Ejercicio17.html">Ejercicio17</a>
       <br /><a href="Ejercicio18/Ejercicio18.html">Ejercicio18</a>
       <br /><a href="Ejercicio19/Practica19.html">Ejercicio19</a>
-      <br /><a href="">Ejercicio20NO</a>
-      <br /><a href="">Ejercicio21NO</a>
-      <br /><a href="">Ejercicio22NO</a>
-      <br /><a href="">Ejercicio23NO</a>
+      <br /><a href="Practica20/Practica20.html">Ejercicio20</a>
     </body>
     <html>
