--- a/HTML/Practica20/Practica20.html
+++ b/HTML/Practica20/Practica20.html
@@ -9,7 +9,7 @@
       <h1 align="center">I.E.S Villablanca</h1>
       <p align="center">Este sera el punto de partida de nuestro viaje</p>
       <p align="center">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d11539401.494229754!2d-7.800204732128209!3d45.08099315810896!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e2!4m5!1s0xd42255d3a247575%3A0xd8a0a40edf810cff!2sIES%20Villablanca%2C%20Calle%20de%20Villablanca%2C%20Madrid!3m2!1d40.406647899999996!2d-3.5998956!4m5!1s0x47c07b5c0460f737%3A0x78105e8819c35c0e!2sCircuito%20de%20Spa-Francorchamps%2C%20Route%20du%20Circuit%2055%2C%204970%20Stavelot%2C%20B%C3%A9lgica!3m2!1d50.4369118!2d5.972049999999999!5e0!3m2!1ses!2ses!4v1603034247838!5m2!1ses!2ses" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d11539401.494229754!2d-7.800204732128209!3d45.08099315810896!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e2!4m5!1s0xd42255d3a247575%3A0xd8a0a40edf810cff!2sIES%20Villablanca%2C%20Calle%20de%20Villablanca%2C%20Madrid!3m2!1d40.406647899999996!2d-3.5998956!4m5!1s0x47c07b5c0460f737%3A0x78105e8819c35c0e!2sCircuito%20de%20Spa-Francorchamps%2C%20Route%20du%20Circuit%2055%2C%204970%20Stavelot%2C%20B%C3%A9lgica!3m2!1d50.4369118!2d5.972049999999999!5e0!3m2!1ses!2ses!4v1603034247838!5m2!1ses!2ses" width="600" height="450" frameborder="0" style="border:8px solid black;" allowfullscreen="" aria-hidden="false" tabindex="0">
           </iframe>
       </p>
   </body>
