--- a/CSS/index.html
+++ b/CSS/index.html
@@ -8,25 +8,25 @@
   <body>
       Ejercicios Alejandro Ortiz
       <br />
-      <br /><a href="Ejercicio1/Ejercicio1-Hola%20mundo(Completo).html">Ejercicio1</a>
-      <br /><a href="Ejercicio2/Ejercicio%202-Redireccion(Completo).html">Ejercicio2</a>
-      <br /><a href="Ejercicio3/Ejercicio%203-CamposMeta(completo).html">Ejercicio3</a>
-      <br /><a href="Ejercicio4/Ejercicio%204.html">Ejercicio4</a>
-      <br /><a href="Ejercicio5/Ejercicio%205.html">Ejercicio5</a>
-      <br /><a href="Ejercicio6/Ejercicio%206.html">Ejercicio6</a>
-      <br /><a href="Ejercicio7/Ejercicio%207.html">Ejercicio7</a>
-      <br /><a href="Ejercicio8/Ejercicio%208.html">Ejercicio8</a>
-      <br /><a href="Ejercicio9/Ejercicio9.html">Ejercicio9</a>
-      <br /><a href="Ejercicio10/Ejercicio10.html">Ejercicio10</a>
-      <br /><a href="Ejercicio11/Ejercicio%2011.html">Ejercicio11</a>
-      <br /><a href="Ejercicio12/Ejercicio12.html">Ejercicio12</a>
-      <br /><a href="Ejercicio13/Ejercicio13.html">Ejercicio13</a>
-      <br /><a href="Ejercicio14/Ejercicio14(mejorado).html">Ejercicio14</a>
-      <br /><a href="Ejercicio15/Ejercicio15.html">Ejercicio15</a>
-      <br /><a href="Ejercicio16/Ejercicio16.html">Ejercicio16</a>
-      <br /><a href="Ejercicio17/Ejercicio17.html">Ejercicio17</a>
-      <br /><a href="Ejercicio18/Ejercicio18.html">Ejercicio18</a>
-      <br /><a href="Ejercicio19/Practica19.html">Ejercicio19</a>
-      <br /><a href="Practica20/Practica20.html">Ejercicio20</a>
+      <br /><a href="Ejercicio1/Practica1.html">Ejercicio1</a>
+      <br /><a href="">Ejercicio2</a>
+      <br /><a href="">Ejercicio3</a>
+      <br /><a href="">Ejercicio4</a>
+      <br /><a href="">Ejercicio5</a>
+      <br /><a href="">Ejercicio6</a>
+      <br /><a href="">Ejercicio7</a>
+      <br /><a href="">Ejercicio8</a>
+      <br /><a href="">Ejercicio9</a>
+      <br /><a href="">Ejercicio10</a>
+      <br /><a href="">Ejercicio11</a>
+      <br /><a href="">Ejercicio12</a>
+      <br /><a href="">Ejercicio13</a>
+      <br /><a href="">Ejercicio14</a>
+      <br /><a href="">Ejercicio15</a>
+      <br /><a href="">Ejercicio16</a>
+      <br /><a href="">Ejercicio17</a>
+      <br /><a href="">Ejercicio18</a>
+      <br /><a href="">Ejercicio19</a>
+      <br /><a href=>Ejercicio20</a>
     </body>
     <html>
