--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <table align="center">
         <tr>
           <th><a href="HTML/index.html">HTML</a></th>
-          <th><a href="css/index.html">CSS</a></th>
+          <th><a href="CSS/index.html">CSS</a></th>
           <th><a href="#">Otros...</a></th>
         </tr>
       </table>
