--- a/CSS/index.html
+++ b/CSS/index.html
@@ -9,24 +9,14 @@
       Ejercicios Alejandro Ortiz
       <br />
       <br /><a href="Ejercicio1/Practica1.html">Ejercicio1</a>
-      <br /><a href="">Ejercicio2</a>
-      <br /><a href="">Ejercicio3</a>
-      <br /><a href="">Ejercicio4</a>
-      <br /><a href="">Ejercicio5</a>
-      <br /><a href="">Ejercicio6</a>
-      <br /><a href="">Ejercicio7</a>
-      <br /><a href="">Ejercicio8</a>
-      <br /><a href="">Ejercicio9</a>
-      <br /><a href="">Ejercicio10</a>
-      <br /><a href="">Ejercicio11</a>
-      <br /><a href="">Ejercicio12</a>
-      <br /><a href="">Ejercicio13</a>
-      <br /><a href="">Ejercicio14</a>
-      <br /><a href="">Ejercicio15</a>
-      <br /><a href="">Ejercicio16</a>
-      <br /><a href="">Ejercicio17</a>
-      <br /><a href="">Ejercicio18</a>
-      <br /><a href="">Ejercicio19</a>
-      <br /><a href=>Ejercicio20</a>
+      <br /><a href="">Ejercicio2NO</a>
+      <br /><a href="">Ejercicio3NO</a>
+      <br /><a href="">Ejercicio4NO</a>
+      <br /><a href="">Ejercicio5NO</a>
+      <br /><a href="">Ejercicio6NO</a>
+      <br /><a href="">Ejercicio7NO</a>
+      <br /><a href="">Ejercicio8NO</a>
+      <br /><a href="">Ejercicio9NO</a>
+      <br /><a href="">Ejercicio10NO</a>
     </body>
     <html>
