--- a/index.html
+++ b/index.html
@@ -13,12 +13,15 @@
       <h1 align="center">Practicas Aplicaciones Web Alejandro Ortiz</h1>
    <table align="center">
         <tr>
-          <th><a href="HTML/index.html">HTML</a>
+          <th>
+              <a href="HTML/index.html">HTML</a>
           </th>
-          <th><a href="CSS/index.html">CSS</a>
+          <th>
+              <a href="CSS/index.html">CSS</a>
               <a href="CSS/Ejercicio1/Practica1.html"></a>
           </th>
-          <th><a href="#">Otros...</a>
+          <th>
+              <a href="#">Otros...</a>
           </th>
         </tr>
       </table>
