--- a/CSS/index.html
+++ b/CSS/index.html
@@ -17,6 +17,6 @@
       <br /><a href="">Ejercicio7NO</a>
       <br /><a href="">Ejercicio8NO</a>
       <br /><a href="">Ejercicio9NO</a>
-      <br /><a href="">Ejercicio10NO</a>
+      <br /><a href="Ejercicio%2520Fuentes/CSSclase30-10-2020.html">Ejercicio Fuentes</a>
     </body>
     <html>
