--- a/CSS/EjercicioFuentes/CSSclase30-10-2020.html
+++ b/CSS/EjercicioFuentes/CSSclase30-10-2020.html
@@ -17,7 +17,7 @@
        <h1>Leyendas de la F1</h1>
        <img src="HYM.jpg">
       <p>
-       Michael Schumacher leyenda de la F1 perdió su record de piloto con más victorias el cual le ha sido arrebatado por Lewis Hamilton
+       Michael Schumacher leyenda de la F1 perdió su record de piloto con más victorias (91) el cual le ha sido arrebatado por Lewis Hamilton (92)
       </p>
 
        </body></center>
