Proyecto 1er trimestre

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
           </th>
           <th>
               <a href="#">Otros...</a>
+        
+        </th>
+            <th>
+              <a href="MiPaginaWeb(Proyecto)/">Proyecto Pagina Web</a>
         </th>
         </tr>
       </table>
