--- a/MiPaginaWeb(Proyecto)/Proyecto.html
+++ b/MiPaginaWeb(Proyecto)/Proyecto.html
@@ -4,14 +4,41 @@
     <title>Practicas HTML Alejandro Ortiz</title>
     <meta content="">
     <style>
-        table, th, td {
-        border: 1px solid black;
-        }
-        
+    body {
+    margin: 0;
+    padding: 60px 0 0 0;
+             }
+ 
+    #page {
+    margin: 0px auto;
+    width: 100%;
+              }
+ 
+    #header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    padding: 15px 20px;
+    background-color: #333;
+    font-size: 20px;
+    color: #FFFFFF;
+}
+ 
+    #content {
+    height: 100%;
+    overflow: auto;
+    padding: 0% 1% 0% 1%;
+    width: 98%;
+}
     </style>
   </head>
-    <h1>Bienvenido a mi Pag Web To Pepino</h1>
   <body>
-              <a href="HTML/index.html">HTML</a>
+      <div id="page">
+    <div align="center" id="header">Bienvenido a mi Web Tó Pepino</div>
+    <div id="content"> 
+        <p>Vivan los gatitos</p> 
+    </div>
+</div>
+            
   </body>
  </html>
