--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         
         </th>
             <th>
-              <a href="MiPaginaWeb(Proyecto)/">Proyecto Pagina Web</a>
+              <a href="MiPaginaWeb(Proyecto)/Proyecto.html">Proyecto Pagina Web</a>
         </th>
         </tr>
       </table>
