--- a/MiPaginaWeb(Proyecto)/Proyecto.html
+++ b/MiPaginaWeb(Proyecto)/Proyecto.html
@@ -3,42 +3,29 @@
   <head>
     <title>Practicas HTML Alejandro Ortiz</title>
     <meta content="">
-    <style>
-    body {
-    margin: 0;
-    padding: 60px 0 0 0;
-             }
- 
-    #page {
-    margin: 0px auto;
-    width: 100%;
-              }
- 
-    #header {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    padding: 15px 20px;
-    background-color: #333;
-    font-size: 20px;
-    color: #FFFFFF;
-}
- 
-    #content {
-    height: 100%;
-    overflow: auto;
-    padding: 0% 1% 0% 1%;
-    width: 98%;
-}
-    </style>
+       <link rel="stylesheet" type="text/css" href="Miestilo.css">
   </head>
-  <body>
+  <body background="">
       <div id="page">
     <div align="center" id="header">Bienvenido a mi Web Tó Pepino</div>
     <div id="content"> 
-        <p>Vivan los gatitos</p> 
+        <h1 align="center">PAGINA EN PROCESO NO ME JUZGUES</h1>
     </div>
-</div>
+    </div>
+<header>
+	<nav>
+		<ul>
+			<li><a href="https://www.twitch.tv/alondro321">Inicio</a></li>
+			<li><a href="https://www.twitch.tv/alondro321">Tutoriales</a></li>
+			<li><a href="https://www.twitch.tv/alondro321">Cursos</a></li>
+			<li><a href="https://www.twitch.tv/alondro321">Preguntame algo</a></li>
+			<li><a href="https://www.twitch.tv/alondro321">Contacto</a></li>
+		</ul>
+	</nav>
+</header>
+      <section class="contenido wrapper">
+ 
+</section>
             
   </body>
  </html>
