--- a/MiPaginaWeb(Proyecto)/RedesSociales.html
+++ b/MiPaginaWeb(Proyecto)/RedesSociales.html
@@ -37,7 +37,7 @@
                     que contenido quieres ver en el canal,
                     tanto en Twitch como en Youtube, 
                     hablar conmigo, 
-                    acceder a sorteos y mucho más</h6><p></p>
+                    acceder a sorteos y mucho más</h6>
          </div>
          <div class="flex-item3">
             <h4>Youtube Alondro321</h4>
@@ -59,6 +59,7 @@
           
           
           <footer align="center">
-<p>Página Web Realizada por: Alejandro Ortiz Martín</p>
+          <p>Página Web Realizada por: Alejandro Ortiz Martín</p>
+          </footer>
    </body>
 </html>
