--- a/MiPaginaWeb(Proyecto)/Proyecto.html
+++ b/MiPaginaWeb(Proyecto)/Proyecto.html
@@ -5,6 +5,7 @@
     <meta content="">
        <link rel="stylesheet" type="text/css" href="Miestilo.css">
       <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+      <link rel=”shortcut icon” type=”image/png” href="favicon.png">
   </head>
   <body>
   <body style="background-color:#F37E7E;">
@@ -27,7 +28,35 @@
       </div>
       <section class="Contenido">
       Bienvenido a mi pagina Web, lo primero es decirte que vas a poder ver aquí, ya que hay varias zonas a las que puedes acceder desde aquí
-          
+          <div class="container">
+  
+  <ul class="slider">
+    <li id="slide1">
+      <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3947459/car.jpg"/>
+    </li>
+    <li id="slide2">
+      <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3947459/sunset.jpg"/>
+    </li>
+    <li id="slide3">
+      <h1>Ejemplo con otros elementos</h1>
+      <p>Esto es un párrafo de ejemplo para comprobar que podemos meter cualquier tipo de elementos en el slider</p>
+      <a href="https://kikopalomares.com/">¡Corre a mi web para más contenido!</a>
+    </li>
+  </ul>
+  
+  <ul class="menu">
+    <li>
+      <a href="#slide1">1</a>
+    </li>
+    <li>
+      <a href="#slide2">2</a>
+    </li>
+     <li>
+      <a href="#slide3">3</a>
+    </li>
+  </ul>
+  
+</div>
           
       </section>
          <div id="footer">   
