--- a/MiPaginaWeb(Proyecto)/CV.html
+++ b/MiPaginaWeb(Proyecto)/CV.html
@@ -54,7 +54,7 @@
                <li>Montaje y reparación de equipos informaticos y conocimiento en hardware</li>
             </table>
            <h2><u>Idiomas</u></h2>
-             <b>Español</b>: Nativo
+             <b>Español</b>: Nativo: oral, escrito y traducido
              <br /><b>Inglés</b>: nivel bajo oral, escrito y traducido
            <h2><u>Datos de Interés</u></h2>
             <table>
