--- a/MiPaginaWeb(Proyecto)/RedesSociales.html
+++ b/MiPaginaWeb(Proyecto)/RedesSociales.html
@@ -22,6 +22,7 @@
             </nav>
         </header>
 <!--Tabla con redes sociales-->
+    <!--TWITCH-->
          <div class="flex-item">
             <h4>Twitch Alondro321</h4>
                
@@ -31,6 +32,7 @@
                  Gran Turismo Sport, Assetto Corsa 
                  y algun shooter ya sea COD o Battlefield</p></h6>
          </div>
+    <!--Twitter-->
          <div class="flex-item2">
             <h4>Twitter Alondro321</h4>
              <blockquote align="center" class="twitter-tweet"><p lang="es" dir="ltr">Comienza una nueva etapa de E-sports con el equipo JKLF1, espero estar a la altura y ojala consigamos muchas victorias, a por todas !!</p>&mdash; Alondro321Twitch (@Alondro321) <a href="https://twitter.com/Alondro321/status/1330895509184278530?ref_src=twsrc%5Etfw">November 23, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
@@ -41,6 +43,7 @@
                     hablar conmigo, 
                     acceder a sorteos y mucho más.</h6>
          </div>
+     <!--Youtube-->
          <div class="flex-item3">
             <h4>Youtube Alondro321</h4>
              <iframe width="560" height="315" src="https://www.youtube.com/embed/0IeMxAcr6eU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
