--- a/MiPaginaWeb(Proyecto)/RedesSociales.html
+++ b/MiPaginaWeb(Proyecto)/RedesSociales.html
@@ -14,7 +14,7 @@
             <nav>
                 <ul class="MenuOpciones">
                     <li><a href="Proyecto.html">Inicio</a></li>
-                    <li><a href="https://www.twitch.tv/alondro321">¿Que servicios ofrezco?</a></li>
+                    <li><a href="https://www.twitch.tv/alondro321">Mis aficiones</a></li>
                     <li><a href="Tutoriales.html">Tutoriales</a></li>
                     <li><a href="CV.html">Mira mi CV</a></li>
                     <li><a href="RedesSociales.html">Contacto/Redes Sociales</a></li>
