--- a/MiPaginaWeb(Proyecto)/Proyecto.html
+++ b/MiPaginaWeb(Proyecto)/Proyecto.html
@@ -6,6 +6,7 @@
        <link rel="stylesheet" type="text/css" href="Miestilo.css">
       <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
       <link rel=”shortcut icon” type=”image/png” href="favicon.png">
+      <meta name="viewport" content="width=device-width", initial-scale="1">
   </head>
   <body>
   <body style="background-color:#F37E7E;">
