--- a/MiPaginaWeb(Proyecto)/Misaficiones.html
+++ b/MiPaginaWeb(Proyecto)/Misaficiones.html
@@ -6,6 +6,7 @@
     <title>Proyecto Pag Web (MIS AFICIONES)</title>
   </head>
    <body>
+       <body style="background-color: firebrick">
       <div id="page">
         <div align="center" id="header">Bienvenido a mi Web Tó Pepino</div>
       </div>
@@ -39,14 +40,14 @@
           </div>
        
        <div class="segundo">
-           <h3>También me gusta muchísimo coger mi casco y mi bici e irme a hacer descensos por el campo, rutas o simplemente ir a explorar y desconectar de todo.</h3>
+           <h3><p>También me gusta muchísimo coger mi casco y mi bici e irme a hacer descensos por el campo, rutas o simplemente ir a explorar y desconectar de todo.</p></h3>
             <div class="bici1" align="center"><img src="fotobici1.jpg" width="1024" height="240" ></div>
             <div class="bici2" align="center"><img src="fotobici2.jpg" width="1024" height="240" ></div>
             <div class="bici3" align="center"><img src="bicicasco.jpg" width="1024" height="540" ></div>
        </div>
        
        <div class="tercero">
-        <h3>Todos los domingos tengo un campeonato de E-Sports en el F1 2020 en el cual me divierto bastante y hay un gran nivel competitivo, ahora mismo soy 2º en el mundial y estoy en la lucha por el titulo de este año, me podreis ver en mi canal de Twitch donde hago directo todos los domingos a las 20:00 hora española.</h3>
+        <h3><p>Todos los domingos tengo un campeonato de E-Sports en el F1 2020 en el cual me divierto bastante y hay un gran nivel competitivo, ahora mismo soy 2º en el mundial y estoy en la lucha por el titulo de este año, me podreis ver en mi canal de Twitch donde hago directo todos los domingos a las 20:00 hora española.</p></h3>
        <video class="video1" src="2020-11-20%2019-40-09.mkv" width=320  height=240 controls>
             </video>
        </div>
