--- a/MiPaginaWeb(Proyecto)/RedesSociales.html
+++ b/MiPaginaWeb(Proyecto)/RedesSociales.html
@@ -59,12 +59,15 @@
         <div class="flex-item4">
             <h4 style="color: black;">Contacto</h4>
                 <h6 ><p style="color: black;">Si deseas contactar desde un medio más privado podrás escribirme a mi correo electrónico <a href="mailto:elcorreoquequieres@correo.com">alejandroduna16@gmail.com</a> o concretar una cita personal en mi oficina que esta aquí.</p></h6>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d911.8315786935367!2d-3.6004819526359846!3d40.40619306263778!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd42255d3a247575%3A0xd8a0a40edf810cff!2sIES%20Villablanca!5e1!3m2!1ses!2ses!4v1606147595907!5m2!1ses!2ses" frameborder="0" style="border:8px solid black;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+    
          </div>
           
 <!--PIE DE PAGINA-->
-          <footer align="center">
-          <p>Página Web Realizada por: Alejandro Ortiz Martín</p>
+         <div id="footer">   
+           <footer align="center">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d911.8315786935367!2d-3.6004819526359846!3d40.40619306263778!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd42255d3a247575%3A0xd8a0a40edf810cff!2sIES%20Villablanca!5e1!3m2!1ses!2ses!4v1606147595907!5m2!1ses!2ses" frameborder="0" style="border:8px solid black;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                <p>Página Web Realizada por: Alejandro Ortiz Martín</p>
           </footer>
+       </div>
    </body>
 </html>
