--- a/MiPaginaWeb(Proyecto)/Proyecto.html
+++ b/MiPaginaWeb(Proyecto)/Proyecto.html
@@ -30,7 +30,7 @@
       </div>
      
       <section class="Contenido">
-      <b>Bienvenido a mi pagina Web, lo primero es decirte que vas a poder ver aquí, en este apartado te dejo unas pistas de lo que encontrarás por aquí</b>
+      <b>Bienvenido a mi página Web, lo primero es decirte que vas a poder ver aquí, en este apartado te dejo unas pistas de lo que encontrarás por aquí</b>
           
          <!--SLIDER-->
           <div class="container">
