--- a/MiPaginaWeb(Proyecto)/Tutoriales.html
+++ b/MiPaginaWeb(Proyecto)/Tutoriales.html
@@ -6,7 +6,7 @@
     <title>Tutoriales</title>
   </head>
    <body>
-       <body style="background-color:#57F75C;">
+       <body style="background-color: #E6F76B;">
        <div id="page">
         <div align="center" id="header">Bienvenido a mi Web Tó Pepino</div>
       </div>
@@ -24,17 +24,17 @@
         </header>
        </div>
        <div align="center">
-        <h3 class="video1"><p>Aquí dejaré algunos tutoriales que me han ayudado a crear la pagina y algun video más sobre otros temas de informatica que son muy curiosos</p></h3>
-           <h4>Este es una introducción a HTML, tambien muy bien explicado</h4>
+        <h3 class="video1"><p>Aquí dejaré algunos tutoriales que me han ayudado a crear la pagina y algun video más sobre otros temas de informática que son muy curiosos</p></h3>
+           <h4>Este es una introducción a HTML, tambien muy bien explicado.</h4>
            <iframe width="560" height="315" src="https://www.youtube.com/embed/rbuYtrNUxg4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
            <div align="center">
                
-           <h4><p>Este es una introducción muy básica a css, esta bastante bien explicado</p></h4>
+           <h4><p>Este es una introducción muy básica a css, esta bastante bien explicado.</p></h4>
              <iframe width="560" height="315" src="https://www.youtube.com/embed/3yM5uXp-T_0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-           <h4>Este trata sobre subredes, los tipos que hay y como crearlas, muy bien explicado, este me ayudo muchisimo el años pasado</h4>
+           <h4>Este trata sobre subredes, los tipos que hay y como crearlas, muy bien explicado, este me ayudo muchisimo el años pasado.</h4>
               <iframe width="560" height="315" src="https://www.youtube.com/embed/SHbBso63X38" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
             
-           <h4>Este explica las máscaras de red</h4>
+           <h4>Este explica las máscaras de red de una manera muy facil de entender.</h4>
                <iframe width="560" height="315" src="https://www.youtube.com/embed/S7F_7Z3qnzA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         <!--PIE DE PAGINA-->
