--- a/MiPaginaWeb(Proyecto)/Misaficiones.html
+++ b/MiPaginaWeb(Proyecto)/Misaficiones.html
@@ -44,7 +44,7 @@
            <h3><p>También me gusta muchísimo coger mi bici e irme a hacer descensos por el campo, rutas o simplemente ir a explorar y desconectar de todo.</p></h3>
             <div class="bici1" align="center"><img src="fotobici1.jpg" width="1024" height="240" ></div>
             <div class="bici2" align="center"><img src="fotobici2.jpg" width="1024" height="240" ></div>
-            <div class="bici3" align="center"><img src="bicicasco.jpg" width="1024" height="540" ></div>
+            <div class="bici3" align="center"><img src="bicicasco2.jpg" width="1024" height="720" ></div>
        </div>
        
        <div class="tercero">
